tests/integration/fail/enum_contract_missing_variant.ncl
# test = 'error'
#
# [metadata]
# error = 'EvalError::BlameError'
'far | [|'foo, 'bar |]
